service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  labels:
    app: hello
spec:
  type: LoadBalancer
  selector:
    app: hello
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
