ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: hello
spec:
  tls:
  - hosts:
    - helloworldz.eastus.cloudapp.azure.com
    secretName: example-app-tls
  rules:
  - host: helloworldz.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: hello-svc
            port: 
              number: 80
